@@ -1,3 +1,10 @@
+2010-06-23  Sergio Martin <sergio.martin@artica.es>
+
+	* include/auth/mysql.php
+	operation/users/user.php
+	godmode/users/user_list.php: Added pagination
+	to users list in operations and administration
+
 2010-06-22  Raúl Mateos <raulofpandora@gmail.com>
 
 	* godmode/reporting/graph_builder.main.php
